  getSignature() call). (Greg)
- Fixed bug #49020 (phar misinterprets ustar long filename standard).
  (Greg)
- Fixed bug #49018 (phar tar stores long filenames wit prefix/name reversed).
  (Greg)
- Fixed bug #49014 (dechunked filter broken when serving more than 8192 bytes in
  a chunk). (andreas dot streichardt at globalpark dot com, Ilia)
- Fixed bug #48980 (Crash when compiling with pdo_firebird). (Felipe)
- Fixed bug #48962 (cURL does not upload files with specified filename).
  (Ilia)
- Fixed bug #48929 (Double \r\n after HTTP headers when "header" context
  option is an array). (David Zülke)
- Fixed bug #48913 (Too long error code strings in pdo_odbc driver).
  (naf at altlinux dot ru, Felipe)
- Fixed bug #48912 (Namespace causes unexpected strict behaviour with
  extract()). (Dmitry)
- Fixed bug #48899 (is_callable returns true even if method does not exist in
  parent class). (Felipe)
- Fixed bug #48893 (Problems compiling with Curl). (Felipe)
- Fixed bug #48872 (string.c: errors: duplicate case values). (Kalle)
- Fixed bug #48854 (array_merge_recursive modifies arrays after first one).
  (Felipe)
- Fixed bug #48802 (printf() returns incorrect outputted length). (Jani)
- Fixed bug #48791 (open office files always reported as corrupted). (Greg)
- Fixed bug #48788 (RecursiveDirectoryIterator doesn't descend into symlinked
  directories). (Ilia)
- Fixed bug #48783 (make install will fail saying phar file exists). (Greg)
- Fixed bug #48771 (rename() between volumes fails and reports no error on 
  Windows). (Pierre)
- Fixed bug #48763 (ZipArchive produces corrupt archive). (dani dot church at 
  gmail dot com, Pierre)
- Fixed bug #48762 (IPv6 address filter still rejects valid address). (Felipe)
- Fixed bug #48757 (ReflectionFunction::invoke() parameter issues). (Kalle)
- Fixed bug #48740 (PHAR install fails when INSTALL_ROOT is not the final install
  location). (james dot cohen at digitalwindow dot com, Greg)